{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 41,
  "lineage": "f4cca227-33bd-8703-3081-3244ced9c3b4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817651307868:vpc/vpc-05ef27c517862c3b1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a0f361027d9f91f3",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-c5dfccbe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05ef27c517862c3b1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a40eb856c7d79f1d",
            "owner_id": "817651307868",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8826743670b02b6",
            "domain": "vpc",
            "id": "eipalloc-0c8826743670b02b6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-237-42-12.compute-1.amazonaws.com",
            "public_ip": "34.237.42.12",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testing_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-043ceee68871e0bb5",
            "arn": "arn:aws:ec2:us-east-1:817651307868:instance/i-082ba1336a19bad6a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082ba1336a19bad6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "github_actions",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a8d3a2b2de463ebe",
            "private_dns": "ip-172-31-20-49.ec2.internal",
            "private_ip": "172.31.20.49",
            "public_dns": "ec2-3-91-59-255.compute-1.amazonaws.com",
            "public_ip": "3.91.59.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00a92482ce7245741",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "github_actions-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f45b9445569db32b",
            "tags": {
              "Environment": "lockdown_github_repo_workflow",
              "Name": "RHEL9-CIS"
            },
            "tags_all": {
              "Environment": "lockdown_github_repo_workflow",
              "Name": "RHEL9-CIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a0efb58546d018b2"
            ]
          },
          "dependencies": [
            "aws_security_group.github_actions",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817651307868:internet-gateway/igw-04034ad217944de0c",
            "id": "igw-04034ad217944de0c",
            "owner_id": "817651307868",
            "tags": {
              "Name": "github_actions-IGW"
            },
            "tags_all": {
              "Name": "github_actions-IGW"
            },
            "vpc_id": "vpc-01b708e3c150ea7af"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8826743670b02b6",
            "connectivity_type": "public",
            "id": "nat-0bc48cf41a8228987",
            "network_interface_id": "eni-0efd60e56d0987365",
            "private_ip": "172.22.0.169",
            "public_ip": "34.237.42.12",
            "subnet_id": "subnet-02b156fc5c94bae46",
            "tags": {
              "Name": "github_actions-NATgw"
            },
            "tags_all": {
              "Name": "github_actions-NATgw"
            }
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817651307868:route-table/rtb-0b23778c663e403d8",
            "id": "rtb-0b23778c663e403d8",
            "owner_id": "817651307868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bc48cf41a8228987",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "github_actions-privateRT"
            },
            "tags_all": {
              "Name": "github_actions-privateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b708e3c150ea7af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817651307868:route-table/rtb-039b4a2ea00cfb738",
            "id": "rtb-039b4a2ea00cfb738",
            "owner_id": "817651307868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04034ad217944de0c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "github_actions-publicRT"
            },
            "tags_all": {
              "Name": "github_actions-publicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b708e3c150ea7af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0436466047e08af61",
            "route_table_id": "rtb-0b23778c663e403d8",
            "subnet_id": "subnet-09d101dbbb1b4725c"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_route_table.privateRT",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a3840367fa78cc1",
            "route_table_id": "rtb-039b4a2ea00cfb738",
            "subnet_id": "subnet-02b156fc5c94bae46"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publicRT",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "github_actions",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817651307868:security-group/sg-0a0efb58546d018b2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0efb58546d018b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "github_actions-SG",
            "name_prefix": "",
            "owner_id": "817651307868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "github_actions-SG"
            },
            "tags_all": {
              "Name": "github_actions-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ef27c517862c3b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817651307868:subnet/subnet-09d101dbbb1b4725c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.22.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d101dbbb1b4725c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817651307868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "github_actions-privatesubnets"
            },
            "tags_all": {
              "Name": "github_actions-privatesubnets"
            },
            "vpc_id": "vpc-01b708e3c150ea7af"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817651307868:subnet/subnet-02b156fc5c94bae46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.22.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b156fc5c94bae46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817651307868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "github_actions-publicsubnets"
            },
            "tags_all": {
              "Name": "github_actions-publicsubnets"
            },
            "vpc_id": "vpc-01b708e3c150ea7af"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817651307868:vpc/vpc-01b708e3c150ea7af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.22.0.0/24",
            "default_network_acl_id": "acl-0f2f90c7e396f3c4c",
            "default_route_table_id": "rtb-0dd233738da250f8d",
            "default_security_group_id": "sg-0ab90c699de2c98a4",
            "dhcp_options_id": "dopt-c5dfccbe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01b708e3c150ea7af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd233738da250f8d",
            "owner_id": "817651307868",
            "tags": {
              "Environment": "lockdown_github_repo_workflow",
              "Name": "RHEL9-CIS"
            },
            "tags_all": {
              "Environment": "lockdown_github_repo_workflow",
              "Name": "RHEL9-CIS"
            }
          }
        }
      ]
    }
  ]
}